fixed wholesale on map and image on mobile problem

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -451,6 +451,7 @@
     transition: 0.3s;    
     width: 31%;
     border-radius: 10px 0 0 10px;
+
     
         
   }
@@ -481,10 +482,10 @@
 
  #listingsdescsmall > a > p >img{    
     margin: auto auto;
-    max-width: 400px;
-    max-height: 300px;
-    min-width: 400px;
-    min-height: 300px;
+    max-width: 90%;
+    max-height: 80%;
+    min-width: 50%;
+    min-height: 40%;
     padding: 10px 0px;
     
     
